  * Fix tests should use results.rmsf to avoid DeprecationWarning (Issue #3695)
  * Fix EDRReader failing when parsing single-frame EDR files (Issue #3999)
  * Fix test clobbering in lib/test_util.py (PR #4000)
  * Fix MSD docs to use the correct error metric in example (Issue #3991)
  * Add 'PairIJ Coeffs' to the list of sections in LAMMPSParser.py
    (Issue #3336)

Enhancements
  * Add simple atomic distance analysis to `analysis.atomicdistances` with
    new class `AtomicDistances` (Issue #3654)
  * Add kwarg `n_frames` to class method `empty()` in
    `MDAnalysis.core.universe`, enabling creation of a `Universe` with
    multiple frames from scratch (PR #4140)
  * PDBReader now populates ts.data['tempfactor'] with the tempfactor for
    each atom *for each frame*. If an entry is missing for a given atom,
    this will default to a `1.0` value. Note, this does not affect the
    topology (i.e. `AtomGroup.tempfactors` is not dynamically updated.
    (Issue #3825, PR #3988)
  * Add writing u.trajectory.ts.data['molecule_tag'] as molecule tags to LAMMPS data file (Issue #3548)
  * Improved speed of chi1_selection (PR #4109)
  * Add `progressbar_kwargs` parameter to `AnalysisBase.run` method, allowing
    to modify description, position etc of tqdm progressbars.
  * Add a nojump transformation, which unwraps trajectories so that particle
    paths are continuous. (Issue #3703, PR #4031)
  * Added AtomGroup TopologyAttr to calculate gyration moments (Issue #3904,
    PR #3905)
  * Add support for TPR files produced by Gromacs 2023 (Issue #4047)
  * Add distopia distance calculation library bindings as a selectable backend
    for `calc_bonds` in `MDA.lib.distances`. (Issue #3783, PR #3914)
  * AuxReaders are now pickle-able and copy-able (Issue #1785, PR #3887)
  * Add pickling support for Atom, Residue, Segment, ResidueGroup 
    and SegmentGroup. (PR #3953)

Changes
  * As per NEP29 the minimum supported Python version has been raised to 3.9
    (PR #4115).