@@ -1,0 +1,79 @@
+build_and_store_wheels: &BUILD_AND_STORE_WHEELS
+  install_cibuildwheel_script:
+    - python -m pip install cibuildwheel==2.12.3
+  run_cibuildwheel_script:
+    - cibuildwheel ./package
+  wheels_artifacts:
+    path: "wheelhouse/*"
+
+
+linux_aarch64_wheel_task:
+  compute_engine_instance:
+    image_project: cirrus-images
+    image: family/docker-builder-arm64
+    architecture: arm64
+    platform: linux
+    cpu: 4
+    memory: 4G
+  env:
+    CIBW_BUILD: cp39-manylinux* cp310-manylinux* cp311-manylinux*
+
+  build_script: |
+    apt install -y python3-venv python-is-python3
+    python3 --version
+    python --version
+  <<: *BUILD_AND_STORE_WHEELS
+
+
+macos_arm64_wheel_task:
+  macos_instance:
+    image: ghcr.io/cirruslabs/macos-monterey-xcode:14
+  env:
+    CIBW_BUILD: cp39-* cp310-* cp311-*
+    PATH: /opt/homebrew/opt/python@3.10/bin:$PATH
+
+  build_script: |
+    brew install python@3.10
+    ln -s python3 /opt/homebrew/opt/python@3.10/bin/python
+    python --version
+    python3 --version
+  <<: *BUILD_AND_STORE_WHEELS
+
+
+wheel_upload_task:
+  depends_on:
+    - macos_arm64_wheel
+    - linux_aarch64_wheel
+  compute_engine_instance:
+    image_project: cirrus-images
+    image: family/docker-builder
+    platform: linux
+  env:
+    TESTPYPI: ENCRYPTED[!adb082e719dbf71b700796a3f6969d1ca8ba69879cbf8ce4e969285b2ccd0212a54afea897c8d55174bd18388b22fd7a!]
+    PYPI: ENCRYPTED[!35e6711ac1b0f6ff790a2743db2e02c9efc07a49865252c53f9482c71609946746eb7d05fa75a13c094c9692f4d869d4!]
+  uploady_script: |
+    curl https://api.cirrus-ci.com/v1/artifact/build/$CIRRUS_BUILD_ID/wheels.zip --output wheels.zip
+    unzip wheels.zip
+    ls *
+    ls wheelhouse
+    apt install -y python3-venv python-is-python3
+    python --version
+    python3 --version
+    python -m pip install pipx
+
+    export TWINE_USERNAME="__token__"
+
+    echo $CIRRUS_RELEASE
+    echo $CIRRUS_TAG
+
+    if [ ! -z "$CIRRUS_RELEASE" ]; then
+        echo "RELEASE INCOMING!"
+        export TWINE_PASSWORD=$PYPI
+        pipx run twine upload -r pypi wheelhouse/* --non-interactive
+    elif [[ $CIRRUS_TAG == "package-"* ]]; then
+        echo "Let's get this tested!"
+        export TWINE_PASSWORD=$TESTPYPI
+        pipx run twine upload -r testpypi wheelhouse/* --non-interactive
+    else
+        echo "Nothing to see here I'm afraid"
+    fi
